--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,14 +7,72 @@ body {
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #fafafa;
+  background-color: #a0b1bd;
   color: #212121;
   line-height: 1.5;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 10vh;
+}
+
+h2,
+ul,
+p,
+li {
+  margin: 0;
+  list-style: none;
 }
 
 #search-box {
   font: inherit;
-  padding: 8px;
-  max-width: 320px;
-  margin-bottom: 16px;
+  padding: 15px;
+  margin-bottom: 10px;
+  max-width: 450px;
+  border: none;
+  border-color: #f3f7f8;
+  border-radius: 10px;
+  margin-bottom: 30px;
+}
+
+input {
+  display: block;
+  width: 100%;
+  border-radius: 0;
+  font-size: 40px;
+  transition: 0.3s ease;
+}
+
+.country-list__item {
+  padding: 5px;
+  gap: 10px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  font-size: 20px;
+  font-weight: 500;
+  max-width: 450px;
+}
+
+.country-title {
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 50px;
+  font-weight: 700;
+  }
+
+.country-info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  line-height: 1.6;
+  font-weight: 400;
+}
+
+.country-info__list {
+  max-width: 500px;
 }
